--- a/ITunesShortcuts/App.xaml
+++ b/ITunesShortcuts/App.xaml
@@ -3,7 +3,7 @@
     x:Class="ITunesShortcuts.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ITunesShortcuts">
+    xmlns:conv="using:ITunesShortcuts.Converters">
 
     <Application.Resources>
         <ResourceDictionary>
@@ -12,8 +12,66 @@
                 <!--  Other merged dictionaries here  -->
             </ResourceDictionary.MergedDictionaries>
 
-            <!--  Other app resources here  -->
+            <!--  Converters  -->
+            <conv:ArrayHelper x:Key="ArrayHelper" />
 
+
+            <!--  Templates  -->
+            <Style x:Key="DividerStyle" TargetType="Rectangle">
+                <Setter Property="Fill" Value="{StaticResource TextFillColorDisabledBrush}" />
+                <Setter Property="Height" Value="2" />
+                <Setter Property="Margin" Value="-16,0" />
+            </Style>
+
+            <Style x:Key="ContainerStyle" TargetType="StackPanel">
+                <Setter Property="Padding" Value="16" />
+                <Setter Property="VerticalAlignment" Value="Top" />
+                <Setter Property="Background" Value="{StaticResource CardBackgroundFillColorDefaultBrush}" />
+                <Setter Property="BorderBrush" Value="{StaticResource TextFillColorDisabledBrush}" />
+                <Setter Property="BorderThickness" Value="1" />
+                <Setter Property="CornerRadius" Value="8" />
+                <Setter Property="Spacing" Value="16" />
+            </Style>
+
+            <ControlTemplate x:Key="SettingsCard">
+                <Grid
+                    Padding="12,12,8,12"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Center"
+                    CornerRadius="8">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="12" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="12" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <Viewbox Height="24" Child="{TemplateBinding Tag}" />
+
+                    <TextBlock
+                        Grid.Column="2"
+                        Margin="0,0,0,16"
+                        VerticalAlignment="Center"
+                        FontSize="15"
+                        Opacity="0.9"
+                        Style="{StaticResource BodyStrongTextBlockStyle}"
+                        Text="{Binding AccessKey, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ArrayHelper}, ConverterParameter=0}"
+                        TextTrimming="CharacterEllipsis" />
+                    <TextBlock
+                        Grid.Column="2"
+                        Margin="0,15,0,0"
+                        VerticalAlignment="Center"
+                        Opacity="0.7"
+                        Text="{Binding AccessKey, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ArrayHelper}, ConverterParameter=1}"
+                        TextTrimming="CharacterEllipsis" />
+
+                    <ContentPresenter
+                        Grid.Column="4"
+                        Margin="0,0,4,0"
+                        HorizontalAlignment="Right" />
+                </Grid>
+            </ControlTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
