--- a/ITunesShortcuts/Views/SettingsView.xaml
+++ b/ITunesShortcuts/Views/SettingsView.xaml
@@ -6,9 +6,10 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:ITunesShortcuts.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    NavigationCacheMode="Enabled"
     mc:Ignorable="d">
 
-    <Grid>
+    <Grid Margin="24,36">
         <Grid.RowDefinitions>
             <RowDefinition Height="0" />
             <RowDefinition Height="24" />
