--- a/ITunesShortcuts/App.xaml
+++ b/ITunesShortcuts/App.xaml
@@ -3,7 +3,7 @@
     x:Class="ITunesShortcuts.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:conv="using:ITunesShortcuts.Converters">
+    xmlns:hlp="using:ITunesShortcuts.Helpers">
 
     <Application.Resources>
         <ResourceDictionary>
@@ -12,11 +12,8 @@
                 <!--  Other merged dictionaries here  -->
             </ResourceDictionary.MergedDictionaries>
 
-            <!--  Converters  -->
-            <conv:ArrayHelper x:Key="ArrayHelper" />
 
-
-            <!--  Templates  -->
+            <!--  Styles  -->
             <Style x:Key="DividerStyle" TargetType="Rectangle">
                 <Setter Property="Fill" Value="{StaticResource TextFillColorDisabledBrush}" />
                 <Setter Property="Height" Value="2" />
@@ -33,6 +30,8 @@
                 <Setter Property="Spacing" Value="16" />
             </Style>
 
+
+            <!--  Templates  -->
             <ControlTemplate x:Key="InfoCard">
                 <Grid
                     Padding="12,0"
@@ -48,24 +47,23 @@
                     <TextBlock
                         VerticalAlignment="Center"
                         FontSize="15"
-                        Opacity="0.9"
+                        Foreground="{StaticResource TextFillColorSecondaryBrush}"
                         Style="{StaticResource BodyStrongTextBlockStyle}"
-                        Text="{TemplateBinding AccessKey}"
+                        Text="{TemplateBinding hlp:Attributes.Title}"
                         TextTrimming="CharacterEllipsis" />
 
                     <TextBlock
                         Grid.Column="2"
-                        Margin="0,0,4,0"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Center"
-                        Opacity="0.7"
-                        Text="{TemplateBinding Tag}" />
+                        Foreground="{StaticResource TextFillColorTertiaryBrush}"
+                        Text="{TemplateBinding hlp:Attributes.Description}" />
                 </Grid>
             </ControlTemplate>
 
             <ControlTemplate x:Key="SettingsCard">
                 <Grid
-                    Padding="12"
+                    Padding="12,0"
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Center"
                     CornerRadius="8">
@@ -77,29 +75,46 @@
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
-                    <Viewbox Height="24" Child="{TemplateBinding Tag}" />
+                    <FontIcon
+                        FontSize="24"
+                        Foreground="{StaticResource TextFillColorSecondaryBrush}"
+                        Glyph="{TemplateBinding hlp:Attributes.Glyph}" />
 
                     <TextBlock
                         Grid.Column="2"
                         Margin="0,0,0,16"
                         VerticalAlignment="Center"
                         FontSize="15"
-                        Opacity="0.9"
+                        Foreground="{StaticResource TextFillColorSecondaryBrush}"
                         Style="{StaticResource BodyStrongTextBlockStyle}"
-                        Text="{Binding AccessKey, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ArrayHelper}, ConverterParameter=0}"
+                        Text="{TemplateBinding hlp:Attributes.Title}"
                         TextTrimming="CharacterEllipsis" />
                     <TextBlock
                         Grid.Column="2"
                         Margin="0,15,0,0"
                         VerticalAlignment="Center"
-                        Opacity="0.7"
-                        Text="{Binding AccessKey, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ArrayHelper}, ConverterParameter=1}"
+                        Foreground="{StaticResource TextFillColorTertiaryBrush}"
+                        Text="{TemplateBinding hlp:Attributes.Description}"
                         TextTrimming="CharacterEllipsis" />
 
-                    <ContentPresenter
-                        Grid.Column="4"
-                        Margin="0,0,4,0"
-                        HorizontalAlignment="Right" />
+                    <ContentPresenter Grid.Column="4" HorizontalAlignment="Right" />
+                </Grid>
+            </ControlTemplate>
+
+            <ControlTemplate x:Key="Button">
+                <Grid
+                    Height="30"
+                    Padding="8,0"
+                    Background="{StaticResource AccentAAFillColorDefaultBrush}"
+                    BorderBrush="{StaticResource AccentAAFillColorTertiaryBrush}"
+                    BorderThickness="1"
+                    CornerRadius="4">
+                    <TextBlock
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        FontWeight="Medium"
+                        Foreground="{StaticResource TextOnAccentAAFillColorPrimary}"
+                        Text="{TemplateBinding hlp:Attributes.Title}" />
                 </Grid>
             </ControlTemplate>
         </ResourceDictionary>
