--- a/ITunesShortcuts/Views/HomeView.xaml
+++ b/ITunesShortcuts/Views/HomeView.xaml
@@ -4,73 +4,242 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hlp="using:ITunesShortcuts.Helpers"
     xmlns:local="using:ITunesShortcuts.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mdl="using:ITunesShortcuts.Models"
+    xmlns:sel="using:ITunesShortcuts.Selectors"
+    Name="RootPage"
+    NavigationCacheMode="Enabled"
     mc:Ignorable="d">
+    <Page.Resources>
+        <DataTemplate x:Key="ShortcutWithDividerTemplate" x:DataType="mdl:Shortcut">
+            <Grid>
+                <StackPanel>
+                    <Grid
+                        Padding="12,0"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Center"
+                        CornerRadius="8">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="36" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="12" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="12" />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="12" />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="8" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
 
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="90" />
-                <ColumnDefinition Width="24" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
+                        <FontIcon
+                            FontSize="24"
+                            Foreground="{StaticResource TextFillColorSecondaryBrush}"
+                            Glyph="&#xe81c;" />
 
-            <Image Source="../Assets/icon.png" />
-            <StackPanel Grid.Column="2" VerticalAlignment="Center">
-                <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="iTunes Shortcuts" />
-                <TextBlock>
-                    <Run Text="IcySnex •" />
-                    <Hyperlink NavigateUri="https://github.com/IcySnex/ITunesShortcuts" ToolTipService.ToolTip="Open the source code on GitHub">GitHub (Source Code)</Hyperlink>
+                        <TextBlock
+                            Grid.Column="2"
+                            Margin="0,0,0,16"
+                            VerticalAlignment="Center"
+                            FontSize="15"
+                            Foreground="{StaticResource TextFillColorSecondaryBrush}"
+                            Style="{StaticResource BodyStrongTextBlockStyle}"
+                            Text="{x:Bind Name}"
+                            TextTrimming="CharacterEllipsis" />
+                        <TextBlock
+                            Grid.Column="2"
+                            Margin="0,15,0,0"
+                            VerticalAlignment="Center"
+                            Foreground="{StaticResource TextFillColorTertiaryBrush}"
+                            TextTrimming="CharacterEllipsis">
+                            <Run Text="{x:Bind Action}" /><Run Text=":" />
+                            <Run Foreground="{StaticResource TextFillColorDisabledBrush}" Text="{x:Bind Parameter}" />
+                        </TextBlock>
+
+                        <Button
+                            Grid.Column="6"
+                            Padding="8"
+                            HorizontalAlignment="Right">
+                            <StackPanel
+                                Grid.Column="4"
+                                Orientation="Horizontal"
+                                Spacing="4">
+                                <ContentControl hlp:Attributes.Title="{x:Bind hlp:Xaml.ModifierToString(Modifiers)}" Template="{StaticResource Button}" />
+
+                                <ContentControl hlp:Attributes.Title="{x:Bind hlp:Xaml.KeyToString(Key)}" Template="{StaticResource Button}" />
+
+                                <FontIcon
+                                    Margin="8,0,0,0"
+                                    FontSize="16"
+                                    Glyph="&#xe70f;" />
+                            </StackPanel>
+                        </Button>
+
+                        <Button
+                            Grid.Column="8"
+                            Width="32"
+                            Padding="0"
+                            VerticalAlignment="Stretch"
+                            Command="{Binding DataContext.RemoveShortcutCommand, ElementName=RootPage}"
+                            CommandParameter="{x:Bind}">
+                            <FontIcon FontSize="16" Glyph="&#xe74d;" />
+                        </Button>
+                    </Grid>
+
+                    <Rectangle
+                        Grid.ColumnSpan="7"
+                        Margin="-16,16,-16,0"
+                        VerticalAlignment="Bottom"
+                        Style="{StaticResource DividerStyle}" />
+                </StackPanel>
+            </Grid>
+        </DataTemplate>
+
+        <DataTemplate x:Key="ShortcutTemplate" x:DataType="mdl:Shortcut">
+            <Grid
+                Padding="12,0"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Center"
+                CornerRadius="8">
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="12" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="12" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="12" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="8" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <FontIcon
+                    FontSize="24"
+                    Foreground="{StaticResource TextFillColorSecondaryBrush}"
+                    Glyph="&#xe81c;" />
+
+                <TextBlock
+                    Grid.Column="2"
+                    Margin="0,0,0,16"
+                    VerticalAlignment="Center"
+                    FontSize="15"
+                    Foreground="{StaticResource TextFillColorSecondaryBrush}"
+                    Style="{StaticResource BodyStrongTextBlockStyle}"
+                    Text="{x:Bind Name}"
+                    TextTrimming="CharacterEllipsis" />
+                <TextBlock
+                    Grid.Column="2"
+                    Margin="0,15,0,0"
+                    VerticalAlignment="Center"
+                    Foreground="{StaticResource TextFillColorTertiaryBrush}"
+                    TextTrimming="CharacterEllipsis">
+                    <Run Text="{x:Bind Action}" /><Run Text=":" />
+                    <Run Foreground="{StaticResource TextFillColorDisabledBrush}" Text="{x:Bind Parameter}" />
                 </TextBlock>
-                <TextBlock Style="{StaticResource BodyStrongTextBlockStyle}" Text="Easily manage your iTunes library with hotkeys" />
-            </StackPanel>
-        </Grid>
-
-        <StackPanel Grid.Row="2" Spacing="12">
-            <StackPanel Style="{StaticResource ContainerStyle}">
-                <TextBlock
-                    Margin="0,0,0,4"
-                    Style="{StaticResource SubtitleTextBlockStyle}"
-                    Text="iTunes Information" />
-
-                <ContentControl
-                    AccessKey="Current Version:"
-                    Tag="{x:Bind viewModel.Info.Version, TargetNullValue='N/A', FallbackValue='N/A'}"
-                    Template="{StaticResource InfoCard}" />
-
-                <Rectangle Style="{StaticResource DividerStyle}" />
-
-                <ContentControl
-                    AccessKey="Installation Location:"
-                    Tag="{x:Bind viewModel.Info.InstallationLocation, TargetNullValue='N/A', FallbackValue='N/A'}"
-                    Template="{StaticResource InfoCard}" />
-
-                <Rectangle Style="{StaticResource DividerStyle}" />
-
-                <ContentControl
-                    AccessKey="Installed At:"
-                    Tag="{x:Bind viewModel.Info.InstalledAt.Value.ToString('MMMM d, yyyy'), TargetNullValue='N/A', FallbackValue='N/A'}"
-                    Template="{StaticResource InfoCard}" />
-            </StackPanel>
-
-            <StackPanel Style="{StaticResource ContainerStyle}">
-                <TextBlock
-                    Margin="0,0,0,4"
-                    Style="{StaticResource SubtitleTextBlockStyle}"
-                    Text="Settings" />
 
                 <Button
-                    HorizontalAlignment="Stretch"
-                    Command="{x:Bind viewModel.NavigateToSettingsCommand}"
-                    Content="Go to Settings" />
+                    Grid.Column="6"
+                    Padding="8"
+                    HorizontalAlignment="Right">
+                    <StackPanel
+                        Grid.Column="4"
+                        Orientation="Horizontal"
+                        Spacing="4">
+                        <ContentControl hlp:Attributes.Title="{x:Bind hlp:Xaml.ModifierToString(Modifiers)}" Template="{StaticResource Button}" />
+
+                        <ContentControl hlp:Attributes.Title="{x:Bind hlp:Xaml.KeyToString(Key)}" Template="{StaticResource Button}" />
+
+                        <FontIcon
+                            Margin="8,0,0,0"
+                            FontSize="16"
+                            Glyph="&#xe70f;" />
+                    </StackPanel>
+                </Button>
+
+                <Button
+                    Grid.Column="8"
+                    Width="32"
+                    Padding="0"
+                    VerticalAlignment="Stretch"
+                    Command="{Binding DataContext.RemoveShortcutCommand, ElementName=RootPage}"
+                    CommandParameter="{x:Bind}">
+                    <FontIcon FontSize="16" Glyph="&#xe74d;" />
+                </Button>
+            </Grid>
+        </DataTemplate>
+
+        <sel:LastItemTemplateSelector
+            x:Key="ShortcutDividerTemplateSelector"
+            LastItemTemplate="{StaticResource ShortcutTemplate}"
+            NormalTemplate="{StaticResource ShortcutWithDividerTemplate}" />
+    </Page.Resources>
+
+    <ScrollViewer>
+        <Grid Margin="24,36">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="36" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="90" />
+                    <ColumnDefinition Width="24" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Image Source="../Assets/icon.png" />
+                <StackPanel Grid.Column="2" VerticalAlignment="Center">
+                    <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="iTunes Shortcuts" />
+                    <TextBlock>
+                        <Run Text="IcySnex •" />
+                        <Hyperlink NavigateUri="https://github.com/IcySnex/ITunesShortcuts" ToolTipService.ToolTip="Open the source code on GitHub">GitHub (Source Code)</Hyperlink>
+                    </TextBlock>
+                    <TextBlock Style="{StaticResource BodyStrongTextBlockStyle}" Text="Easily manage your iTunes library with hotkeys" />
+                </StackPanel>
+            </Grid>
+
+            <StackPanel Grid.Row="2" Spacing="12">
+                <StackPanel Margin="0,0,0,12" Style="{StaticResource ContainerStyle}">
+                    <TextBlock
+                        Margin="0,0,0,4"
+                        Style="{StaticResource SubtitleTextBlockStyle}"
+                        Text="Shortcuts" />
+
+                    <Button
+                        HorizontalAlignment="Stretch"
+                        Command="{x:Bind viewModel.CreateShortcutCommand}"
+                        Content="Create new Shortcut" />
+
+                    <ItemsControl
+                        Margin="0,12,0,0"
+                        Padding="-16,0,-12,0"
+                        ItemTemplateSelector="{StaticResource ShortcutDividerTemplateSelector}"
+                        ItemsSource="{x:Bind viewModel.ShortcutManager.Shortcuts}">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <StackPanel Spacing="16" />
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                    </ItemsControl>
+                </StackPanel>
+
+                <StackPanel Style="{StaticResource ContainerStyle}">
+                    <TextBlock
+                        Margin="0,0,0,4"
+                        Style="{StaticResource SubtitleTextBlockStyle}"
+                        Text="Settings" />
+
+                    <Button
+                        HorizontalAlignment="Stretch"
+                        Command="{x:Bind viewModel.NavigateToSettingsCommand}"
+                        Content="Go to Settings" />
+                </StackPanel>
             </StackPanel>
-        </StackPanel>
-    </Grid>
+        </Grid>
+    </ScrollViewer>
 </Page>
