--- a/ITunesShortcuts/Views/SettingsView.xaml
+++ b/ITunesShortcuts/Views/SettingsView.xaml
@@ -4,17 +4,16 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hlp="using:ITunesShortcuts.Helpers"
     xmlns:local="using:ITunesShortcuts.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     NavigationCacheMode="Enabled"
     mc:Ignorable="d">
 
-    <Grid Margin="24,36">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="0" />
-            <RowDefinition Height="24" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
+    <StackPanel
+        Grid.Row="2"
+        Margin="24,36"
+        Spacing="24">
 
         <Grid Margin="-24,-36,-24,0" Background="{StaticResource SolidBackgroundFillColorBaseBrush}">
             <Button
@@ -40,21 +39,57 @@
             </Button>
         </Grid>
 
-        <StackPanel Grid.Row="2" Style="{StaticResource ContainerStyle}">
+        <StackPanel Style="{StaticResource ContainerStyle}">
             <TextBlock
                 Margin="0,0,0,4"
                 Style="{StaticResource SubtitleTextBlockStyle}"
                 Text="Settings" />
 
-            <ContentControl AccessKey="Auto Start|Run iTunesShortcuts at Windows startup" Template="{StaticResource SettingsCard}">
-                <ContentControl.Tag>
-                    <FontIcon Glyph="&#xe81c;" />
-                </ContentControl.Tag>
+            <ContentControl
+                hlp:Attributes.Description="Run iTunesShortcuts at Windows startup"
+                hlp:Attributes.Glyph="&#xe81c;"
+                hlp:Attributes.Title="Auto Start"
+                Template="{StaticResource SettingsCard}">
 
-                <ToggleSwitch Margin="0,0,-90,0" IsOn="{x:Bind viewModel.Configuration.IsAutoStartEnabled, Mode=TwoWay}" />
+                <ToggleSwitch Margin="0,0,-82,0" IsOn="{x:Bind viewModel.Configuration.IsAutoStartEnabled, Mode=TwoWay}" />
             </ContentControl>
 
             <Rectangle Style="{StaticResource DividerStyle}" />
+
+            <ContentControl
+                hlp:Attributes.Description="Run iTunesShortcuts at Windows startup"
+                hlp:Attributes.Glyph="&#xe81c;"
+                hlp:Attributes.Title="Auto Start"
+                Template="{StaticResource SettingsCard}">
+
+                <ToggleSwitch Margin="0,0,-82,0" IsOn="{x:Bind viewModel.Configuration.IsAutoStartEnabled, Mode=TwoWay}" />
+            </ContentControl>
         </StackPanel>
-    </Grid>
+
+        <StackPanel Style="{StaticResource ContainerStyle}">
+            <TextBlock
+                Margin="0,0,0,4"
+                Style="{StaticResource SubtitleTextBlockStyle}"
+                Text="iTunes Information" />
+
+            <ContentControl
+                hlp:Attributes.Description="{x:Bind viewModel.Info.Version, TargetNullValue='N/A', FallbackValue='N/A'}"
+                hlp:Attributes.Title="Current Version:"
+                Template="{StaticResource InfoCard}" />
+
+            <Rectangle Style="{StaticResource DividerStyle}" />
+
+            <ContentControl
+                hlp:Attributes.Description="{x:Bind viewModel.Info.InstallationLocation, TargetNullValue='N/A', FallbackValue='N/A'}"
+                hlp:Attributes.Title="Installation Location:"
+                Template="{StaticResource InfoCard}" />
+
+            <Rectangle Style="{StaticResource DividerStyle}" />
+
+            <ContentControl
+                hlp:Attributes.Description="{x:Bind viewModel.Info.InstalledAt.Value.ToString('MMMM d, yyyy'), TargetNullValue='N/A', FallbackValue='N/A'}"
+                hlp:Attributes.Title="Installed At:"
+                Template="{StaticResource InfoCard}" />
+        </StackPanel>
+    </StackPanel>
 </Page>
