--- a/ITunesShortcuts/Views/CreateShortcutView.xaml
+++ b/ITunesShortcuts/Views/CreateShortcutView.xaml
@@ -4,13 +4,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:enm="using:ITunesShortcuts.Enums"
     xmlns:hlp="using:ITunesShortcuts.Helpers"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <StackPanel Spacing="12">
-        <ContentControl hlp:Attributes.Title="Name" Template="{StaticResource Container}">
-            <TextBox PlaceholderText="Shortcut Name" Text="{x:Bind viewModel.ShortcutName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+        <ContentControl hlp:Attributes.Title="Name" Style="{StaticResource WithHeader}">
+            <TextBox PlaceholderText="Shortcut Name" Text="{x:Bind viewModel.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
         </ContentControl>
 
         <Grid>
@@ -20,11 +21,11 @@
                 <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
 
-            <ContentControl hlp:Attributes.Title="Action" Template="{StaticResource Container}">
+            <ContentControl hlp:Attributes.Title="Action" Style="{StaticResource WithHeader}">
                 <ComboBox
                     HorizontalAlignment="Stretch"
                     PlaceholderText="Shortcut Action"
-                    SelectedIndex="{x:Bind viewModel.SelectedAction}">
+                    SelectedIndex="{x:Bind viewModel.SelectedAction, Mode=TwoWay}">
                     <ComboBoxItem Content="None" />
                     <ComboBoxItem Content="Add to Playlist" />
                     <ComboBoxItem Content="Rate" />
@@ -34,65 +35,108 @@
             <ContentControl
                 Grid.Column="2"
                 hlp:Attributes.Title="Parameter"
-                Template="{StaticResource Container}">
+                Style="{StaticResource WithHeader}">
                 <ComboBox
                     HorizontalAlignment="Stretch"
                     PlaceholderText="Parameter"
-                    SelectedIndex="{x:Bind viewModel.SelectedParameter}">
+                    SelectedIndex="{x:Bind viewModel.SelectedParameter, Mode=TwoWay}">
                     <ComboBoxItem Content="None" />
                 </ComboBox>
             </ContentControl>
         </Grid>
 
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3*" />
-                <ColumnDefinition Width="12" />
-                <ColumnDefinition Width="2*" />
-            </Grid.ColumnDefinitions>
+        <ContentControl hlp:Attributes.Title="Key" Style="{StaticResource WithHeader}">
+            <ToggleButton IsChecked="{x:Bind viewModel.IsListeningKey, Mode=TwoWay}" Style="{StaticResource KeyButtonStyle}">
+                <StackPanel
+                    Grid.Column="4"
+                    Orientation="Horizontal"
+                    Spacing="4">
 
-            <ContentControl hlp:Attributes.Title="Key" Template="{StaticResource Container}">
+                    <ContentControl
+                        hlp:Attributes.Title="{x:Bind viewModel.Key, Mode=OneWay, Converter={StaticResource KeyToStringConverter}, TargetNullValue='None', FallbackValue='None'}"
+                        Style="{StaticResource Key}"
+                        Visibility="{x:Bind viewModel.IsListeningKey, Mode=OneWay, Converter={StaticResource InverseBoolToVisibilityConverter}}" />
+
+                    <TextBlock Text="Press any key..." Visibility="{x:Bind viewModel.IsListeningKey, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}" />
+
+                    <FontIcon
+                        Margin="8,0,0,0"
+                        FontSize="16"
+                        Glyph="&#xe70f;" />
+                </StackPanel>
+            </ToggleButton>
+        </ContentControl>
+
+
+        <ContentControl hlp:Attributes.Title="Key Modifier" Style="{StaticResource WithHeader}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="4" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="4" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="4" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="4" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="4" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="4" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="4" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="4" />
+                </Grid.ColumnDefinitions>
+
                 <ToggleButton
-                    Height="48"
-                    Padding="8"
-                    HorizontalAlignment="Stretch"
-                    IsChecked="{x:Bind viewModel.IsListeningKey, Mode=TwoWay}">
-                    <StackPanel
-                        Grid.Column="4"
-                        Orientation="Horizontal"
-                        Spacing="4">
-
-                        <ContentControl
-                            hlp:Attributes.Title="{x:Bind viewModel.Key, Mode=OneWay, Converter={StaticResource KeyToStringConverter}, TargetNullValue='None', FallbackValue='None'}"
-                            Template="{StaticResource Button}"
-                            Visibility="{x:Bind viewModel.IsListeningKey, Mode=OneWay, Converter={StaticResource InverseBoolToVisibilityConverter}}" />
-
-                        <TextBlock Text="Press any key..." Visibility="{x:Bind viewModel.IsListeningKey, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}" />
-
-                        <FontIcon
-                            Margin="8,0,0,0"
-                            FontSize="16"
-                            Glyph="&#xe70f;" />
-                    </StackPanel>
-                </ToggleButton>
-            </ContentControl>
-
-            <ContentControl
-                Grid.Column="2"
-                hlp:Attributes.Title="Key Modifier"
-                Template="{StaticResource Container}">
-                <ComboBox
-                    HorizontalAlignment="Stretch"
-                    VerticalAlignment="Stretch"
-                    PlaceholderText="Key Modifier"
-                    SelectedIndex="{x:Bind viewModel.Modifiers, Mode=TwoWay, Converter={StaticResource ModifiersToIndexConverter}}">
-                    <ComboBoxItem Content="None" />
-                    <ComboBoxItem Content="Alt" />
-                    <ComboBoxItem Content="Ctrl" />
-                    <ComboBoxItem Content="Shift" />
-                    <ComboBoxItem Content="Win" />
-                </ComboBox>
-            </ContentControl>
-        </Grid>
+                    Command="{x:Bind viewModel.SetModifierCommand}"
+                    CommandParameter="{x:Bind enm:Modifier.LAlt}"
+                    Content="LAlt"
+                    Style="{StaticResource KeyButtonStyle}" />
+                <ToggleButton
+                    Grid.Column="2"
+                    Command="{x:Bind viewModel.SetModifierCommand}"
+                    CommandParameter="{x:Bind enm:Modifier.RAlt}"
+                    Content="RAlt"
+                    Style="{StaticResource KeyButtonStyle}" />
+                <ToggleButton
+                    Grid.Column="4"
+                    Command="{x:Bind viewModel.SetModifierCommand}"
+                    CommandParameter="{x:Bind enm:Modifier.LCtrl}"
+                    Content="LCtrl"
+                    Style="{StaticResource KeyButtonStyle}" />
+                <ToggleButton
+                    Grid.Column="6"
+                    Command="{x:Bind viewModel.SetModifierCommand}"
+                    CommandParameter="{x:Bind enm:Modifier.RCtrl}"
+                    Content="RCtrl"
+                    Style="{StaticResource KeyButtonStyle}" />
+                <ToggleButton
+                    Grid.Column="8"
+                    Command="{x:Bind viewModel.SetModifierCommand}"
+                    CommandParameter="{x:Bind enm:Modifier.LShift}"
+                    Content="LShift"
+                    Style="{StaticResource KeyButtonStyle}" />
+                <ToggleButton
+                    Grid.Column="10"
+                    Command="{x:Bind viewModel.SetModifierCommand}"
+                    CommandParameter="{x:Bind enm:Modifier.RShift}"
+                    Content="RShift"
+                    Style="{StaticResource KeyButtonStyle}" />
+                <ToggleButton
+                    Grid.Column="12"
+                    Command="{x:Bind viewModel.SetModifierCommand}"
+                    CommandParameter="{x:Bind enm:Modifier.LWin}"
+                    Content="LWin"
+                    Style="{StaticResource KeyButtonStyle}" />
+                <ToggleButton
+                    Grid.Column="14"
+                    Command="{x:Bind viewModel.SetModifierCommand}"
+                    CommandParameter="{x:Bind enm:Modifier.RWin}"
+                    Content="RWin"
+                    Style="{StaticResource KeyButtonStyle}" />
+            </Grid>
+        </ContentControl>
     </StackPanel>
 </UserControl>
